--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<h1>salom</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="Style.css">
+</head>
+
+<body>
+    <div class="container">
+        <div class="section">
+            <div class="sec1">
+                <h1>Yangi yil</h1>
+                <h2>2022-yilgacha qolgan vaqt:</h2>
+            </div>
+            <div class="sec2">
+                <div>
+                    <h1>Oy</h1>
+                    <h2 id="Month">00</h2>
+                </div>
+                <div>
+                    <h1>Kun</h1>
+                    <h2 id="Days">00</h2>
+                </div>
+                <div>
+                    <h1>Soat</h1>
+                    <h2 id="Hours">00</h2>
+                </div>
+                <div>
+                    <h1>Minut</h1>
+                    <h2 id="Minutes">00</h2>
+                </div>
+                <div>
+                    <h1>Sekund</h1>
+                    <h2 id="Seconds">00</h2>
+                </div>
+                <div>
+                    <h1>Millisekund</h1>
+                    <h2 id="Milliseconds">00</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
