--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
             </div>
             <div class="sec2">
                 <div>
-                    <h1>Oy</h1>
-                    <h2 id="Month">00</h2>
-                </div>
-                <div>
                     <h1>Kun</h1>
                     <h2 id="Days">00</h2>
                 </div>
@@ -37,13 +33,10 @@
                     <h1>Sekund</h1>
                     <h2 id="Seconds">00</h2>
                 </div>
-                <div>
-                    <h1>Millisekund</h1>
-                    <h2 id="Milliseconds">00</h2>
-                </div>
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="myjs.js"></script>
 </body>
 
 </html>
